--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <link rel="icon" type="image/png" href="/favicon.png"/>
         <link rel="stylesheet" href="/css/main.css">
         <link rel="stylesheet" href="./css/district.css">
+
+        <meta charset="utf-8">
     </head>
     <body>
         <div id="nav-container"></div>
@@ -25,45 +27,49 @@
 
 
         <script type="text/javascript">
-            var slides = [
+            var slides = [];
+            var puzzleWindows = [];
+
+            var slideSpecs = [
                 {
-                    title: "Welcom to Timville",
-                    description: "Alice and Bob start a town. Alice likes red carpets. Bob likes blue. They split the floor into 2 separately-carpeted districts. Everyone is happy.",
+                    title: "Welcome to Rugton",
+                    description:
+                    "<p>Alice and Bob start a town, but they have a problem. Alice likes Red carpets, but Bob likes Blue.</p><p>They decide to split the floor into 2 separate carpet districts.</p><p>For now, everyone is happy.</p>",
                     query: "?=&x=2&y=1&s=-1&t=0&g=2&r=1&p=01",
                 },
                 {
                     title: "Democracy is Born",
-                    description: "Two friends move in, so a vote is held for new carpets. Both districts tie, so grey is picked as a compromise.",
+                    description: "<p>Two friends move in, so a vote is held for new carpets.</p><p>Both districts tie, so they compromise on Grey.</p>",
                     query: "?=&x=2&y=2&s=-1&t=0&g=2&r=1&p=0110",
                 },
                 {
-                    title: "Timville Expands",
-                    description: "A third group is added to accomodate new arrivals, but overall Timville remains pretty balanced.",
-                    query: "?=&x=2&y=3&s=0&t=0&g=3&r=1&p=001011",
+                    title: "Rugton Expands",
+                    description: "<p>A third group is added to accomodate new arrivals, and a new vote is held.</p><p>Overall, Rugtonians are pretty happy with their carpet.</p>",
+                    query: "?=&x=2&y=3&s=-1&t=0&g=3&r=1&p=001011",
                 },
                 {
                     title: "Red Carpeters Take Charge",
-                    description: "Borders are redrawn once again, but this time red gains power. From now on, they get to divide up the floor. They were elected, after all.",
+                    description: "<p>Borders are redrawn once again, but this time Red gains power.</p><p>From now on, they get to divide up the floor.</p><p>They were elected, after all.<p>",
                     query: "?=&x=3&y=3&s=1&t=1&g=3&r=1&p=100101001",
                 },
                 {
                     title: "Cracking",
-                    description: "Timville is perfectly split on their preferred color, but somehow red ends up with most of the floor.",
+                    description: "<p>Rugton is perfectly split on their preferred color.</p><p>Somehow, the floor is still mostly Red. About 25% of Rugtonians feel kind of cheated.</p><p>Anti-Red sentiment begins to fester.</p>",
                     query: "?=&x=4&y=3&s=2&t=0&g=4&r=1&p=000000111111",
                 },
                 {
                     title: "Packing",
-                    description: "The share of Red voters begins to dwindle, but their share of the floor does not.",
+                    description: "<p>The share of Red voters begins to dwindle.</p><p>Their share of the floor does not.</p>",
                     query: "?=&x=5&y=3&s=1&t=0&g=3&r=1&p=001110011100111",
                 },
                 {
                     title: "Linking",
-                    description: "The red population gets even smaller and begins to fracture. Nonetheless, clever floor plans keep most of the carpet nice and red.",
+                    description: "<p>The Red population shrinks and fractures.</p><p>Nonetheless, the Red leadership finds a clever way to keep control of the floor.</p>",
                     query: "?=&x=6&y=3&s=1&t=0&g=3&r=1&p=001100011110110011",
                 },
                 {
                     title: "God Intervenes.",
-                    description: "\"Hey wait a minute,\" says God, \"This sucks. New rule: from now on, each district picks two colors. Put them in stripes on the floor or something.\"",
+                    description: "<p>\"Hey wait a minute,\" says God,</p><p>\"This sucks. New rule: From now on, each district picks two colors. Put them in stripes on the floor or something.\"</p><p>This is a problem for Team Red.</p>",
                     query: "?=&x=6&y=3&s=0&t=0&g=3&r=2&p=001100011110110011",
                 },
                 /*
@@ -75,8 +81,18 @@
                 */
             ];
 
+            var slideIndex = 0;
+            var slideTotal = slides.length;
+
             appendSlide = function(spec){
                 var deck = document.getElementById("deck");
+
+                if (slideIndex > 0) {
+                    var ruler = document.createElement('div');
+                    ruler.className = "ruler";
+                    deck.appendChild(ruler);
+                    ruler.innerHTML = "<hr>";
+                }
 
                 var slide = document.createElement('div');
                 slide.className = "slide";
@@ -101,25 +117,45 @@
                 slide.appendChild(puzzle);
 
                 var embedURL = "./embed.html"+spec.query;
-                puzzle.innerHTML = "<iframe id=\"frame\" src=\""+embedURL+"\" width=\"768px\" height=\"768px\" style=\"border:1px solid black\"></iframe>";
+                puzzle.innerHTML = "<iframe id=\"frame\" src=\""+embedURL+"\" width=\"600px\" height=\"600px\" style=\"border:1px solid black\"></iframe>";
 
-                setTimeout(function(){
-                    puzzle.querySelector("#frame").contentWindow.setCompletionCallback(advance);
-                }, 1000);
+                var puzzleFrame = puzzle.querySelector("#frame");
+                puzzleFrame.addEventListener('load', function(){
+                    puzzleFrame.contentWindow.setCompletionCallback(advance);
 
-                //puzzle.querySelector("#frame").contentWindow.setCompletionCallback(advance);
+                    slides.push(slide);
+                    puzzleWindows.push(puzzleFrame.contentWindow);
+
+                    slide.addEventListener("mouseenter", function(event){
+                        setActiveSlide(event.target);
+                    });
+                    slide.addEventListener("touchstart", function(event){
+                        setActiveSlide(event.target);
+                    });
+
+                    setActiveSlide(slide);
+                });
+
+                slideIndex++;
 
                 return slide;
             }
 
+            setActiveSlide = function(targetSlide){
+                for (var i = 0; i < slides.length; i++) {
+                    if (slides[i] == targetSlide) puzzleWindows[i].setPause(false);
+                    else puzzleWindows[i].setPause(true);
+                }
+            }
+
             advance = function(){
-                if (slides.length > 0) {
-                    var slide = appendSlide(slides.shift());
+                if (slideSpecs.length > 0) {
+                    var slide = appendSlide(slideSpecs.shift());
                     slide.scrollIntoView({
                         behavior: "smooth",
                         block: "start",
                     });
-                    if (slides.length == 0) {
+                    if (slideSpecs.length == 0) {
                         document.getElementById("advance").style.visibility = "hidden";
                     }
                 }
