--- a/embed.html
+++ b/embed.html
@@ -23,6 +23,7 @@ canvas {
     <head>
         <title>District</title>
         <script language="javascript" src="./js/mover.js" type="text/javascript"></script>
+        <script language="javascript" src="./js/chart.js" type="text/javascript"></script>
         <script language="javascript" src="./js/rep.js" type="text/javascript"></script>
         <script language="javascript" src="./js/view.js" type="text/javascript"></script>
         <script language="javascript" src="./js/util.js" type="text/javascript"></script>
@@ -39,6 +40,7 @@ canvas {
         <script language="javascript" src="./js/balance.js" type="text/javascript"></script>
 
         <link rel="icon" type="image/png" href="/favicon.png"/>
+        <meta charset="utf-8">
     </head>
     <body>
         <canvas width="640" height="640" id="gameCanvas">
@@ -60,6 +62,7 @@ canvas {
             canvas.addEventListener("touchend", onTouchEnd, false);
             canvas.addEventListener("touchcancel", onTouchCancel, false);
             canvas.addEventListener("touchmove", onTouchMove, false);
+            context.textBaseline="middle"; 
 
             var mouseListeners = [];
             var updateListeners = [];
@@ -111,8 +114,10 @@ canvas {
                     base: '#18F2F2',
                     touch: '#F2BC18',
                     click: '#CCCCCC',
-                    prompt: '#404040',
                     disabled: '#808080',
+                    prompt: '#404040',
+                    text: '#202020',
+                    chart: '#fff',
                 },
 
                 balance: {
@@ -166,6 +171,14 @@ canvas {
             var pause = false;
             window.setPause = function(PAUSE){
                 pause = PAUSE;
+            }
+
+            window.setDrawGap = function(drawGap){
+                menu.chart.setDrawGap(drawGap);
+            }
+
+            window.setShowReset = function(showReset){
+                menu.setShowReset(showReset);
             }
 
             window.invertBoard = function(){
